--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -85,6 +85,7 @@
                         </tr>
                     </tbody>
                 </table>
+                <h2>Total: {{total}}</h2>
                 </div>
             </div>
         </div>
